# pxls2

./: .gitignore  Cargo.toml  Makefile  README.md
src/: arch.rs  config.rs  excel1.rs  lib.rs  ls.rs  main.rs  pkg.rs  readjson7.rs  run.rs
test/1/: R8.json  c7.json  host1.json
test/7/: R067.json  R067_i686.json  web02.json  web02_i686.json
