[package]
name = "pxls2"
version = "0.1.0"
authors = ["heiwa4126 <heiwa4126@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
getopts = "0.2"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
simple_excel_writer="0.1"
